--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.9.1",
+      "@types/express": "^5.0.0",
       "@types/node": "^16.11.10",
+      "express": "^4.21.2",
+      "ts-node": "10.9.1",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.20",
+      "dotenv": "^16.4.7",
+      "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0"
+      "typeorm": "0.3.20"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
