--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
    "compilerOptions": {
       "lib": [
          "es5",
-         "es6"
+         "es6",
       ],
+      "esModuleInterop": true,
       "target": "es5",
       "module": "commonjs",
       "moduleResolution": "node",
